--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,92 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+html,
+body,
+#__next {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+* {
+  box-sizing: border-box;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
+.app-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.map-wrapper,
+.loading-holder {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.loading-holder {
+  background: -webkit-linear-gradient(
+    45deg,
+    rgba(152, 207, 195, 0.7),
+    rgb(86, 181, 184)
+  );
+  background: -moz-linear-gradient(
+    45deg,
+    rgba(152, 207, 195, 0.7),
+    rgb(86, 181, 184)
+  );
   background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    45deg,
+    rgba(152, 207, 195, 0.7),
+    rgb(86, 181, 184),
+    0.9
+  );
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+.loading-holder .icon {
+  transform: scale(2);
+  fill: rgba(1, 1, 1, 0.7);
+  animation: pulse 1.5s ease-in-out infinite;
+}
+
+.loading-holder h1 {
+  margin-top: 4rem;
+  text-shadow: 0px 0px 10px rgba(152, 207, 195, 0.7);
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(2);
   }
+  50% {
+    transform: scale(2.3);
+  }
+  100% {
+    transform: scale(2);
+  }
+}
+
+.viewport-panel {
+  background-color: rgba(35, 55, 75, 0.9);
+  color: #ffffff;
+  padding: 6px 12px;
+  font-family: monospace;
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 12px;
+  border-radius: 4px;
+  font-size: 1.2rem;
 }
